feat: add metrics, fix timeouts, add collector
Signed-off-by: Todd Baert <todd.baert@dynatrace.com>

--- a/deployment/env-flag-spec.yaml
+++ b/deployment/env-flag-spec.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: open-feature-demo
 data:
   NEW_WELCOME_MESSAGE: "false"
-  FIB_ALGO: default
+  FIB_ALGO: recursive
   HEX_COLOR: 00CC00
