--- a/deployment/collector.yaml
+++ b/deployment/collector.yaml
@@ -31,7 +31,6 @@ spec:
           volumeMounts:
             - name: collector-config
               mountPath: /etc/collector
-              subpath: collector-config.yaml
               readOnly: true
 ---
 apiVersion: v1
@@ -61,6 +60,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: collector-config
+  namespace: open-feature-demo
 data:
   collector-config.yaml: |
     receivers:
