--- a/deployment/env-flag-spec.yaml
+++ b/deployment/env-flag-spec.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: open-feature-demo
 data:
   NEW_WELCOME_MESSAGE: "false"
-  FIB_ALGO: recursive
-  HEX_COLOR: 00CC00
+  FIB_ALGO: "recursive"
+  HEX_COLOR: "00CC00"
