--- a/deployment/prometheus.yaml
+++ b/deployment/prometheus.yaml
@@ -28,7 +28,6 @@ spec:
           volumeMounts:
             - name: prometheus
               mountPath: /etc/prometheus
-              subpath: prometheus.yml
               readOnly: true
 ---
 apiVersion: v1
@@ -49,6 +48,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus
+  namespace: open-feature-demo
 data:
   prometheus.yml: |
     global:
